--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 font-family: &#39;Poppins&#39;, sans-serif;
 }
 .cabecalho {
-background-color: #3B0050;
+background-color: #695470;
 color: white;
 display: flex;
 justify-content: space-around;
