--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ align-items: center;
 padding: 24px 0;
 }
 .cabecalho-imagem{
-width: 35;
+width: 8%;
 }
 .cabecalho-lista-item{
 display: inline-block;
