--- a/style.css
+++ b/style.css
@@ -1,22 +1,28 @@
-*{
-    margin: 0;padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 }
+
 body {
-font-family: &#39;Poppins&#39;, sans-serif;
+    font-family: "Popins";
+
 }
+
 .cabecalho {
-background-color: #695470;
-color: white;
-display: flex;
-justify-content: space-around;
-align-items: center;
-padding: 24px 0;
+    background-color: #695470;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
 }
-.cabecalho-imagem{
-width: 8%;
+
+.cabecalho-imagem {
+    width: 300px;
 }
-.cabecalho-lista-item{
-display: inline-block;
-margin: 0 16px;
-font-size: 16px;
+
+.cabecalho-lista-item {
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 16px;
 }
