--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ body {
 
 /* secao cabecalho*/
 .cabecalho {
-    background-color: #ec6618;
+    background-color: #272727;
     color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 24px 0;
-    border-bottom: 2px solid #310d53b2;
+    border-bottom: 2px solid #ebdf41fd;
 }
 
 .cabecalho-imagem{
@@ -36,12 +36,12 @@ body {
 }
 /* secao sobre nos*/
 .sobre_nos{
-    background-image: linear-gradient(#3B0050,#3b00501f);
+    background-image: linear-gradient(#2adfa3,#c528283f);
     color:#FFFFFF;
     display: flex;
     justify-content: center;
     padding: 50px;
-    border-bottom: 2px solid #ffff00b2;
+    border-bottom: 2px solid #5dff1eb2;
 }
 
 .sobre_nos-div-conteudo{
@@ -63,11 +63,11 @@ body {
 
 /* secao lojas*/
 .lojas{
-    background-color: #a9a9a9;
+    background-color: #2e2d2d;
 }
 
 .lojas-titulo{
-color: #3B0050;
+color: #e0720a;
 text-align: center;
 padding: 50px;
 font-size: 45px;
