--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: 'Mooli';
-    background-image: url("360.jpg"), url("pasta/Imagem2.jpg");
+    background-image: url("360_F_550557805_B87SNs3Eo2LGsQV61VwnhDF9fSKCmpzU.jpg");
 }
 
 /* secao cabecalho*/
