--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ body {
 }
 /* secao sobre nos*/
 .sobre_nos{
-    background-image: linear-gradient(#2adfa3,#c528283f);
+    background-image: linear-gradient(#e9ad3f,#f350053f);
     color:#FFFFFF;
     display: flex;
     justify-content: center;
     padding: 50px;
-    border-bottom: 2px solid #5dff1eb2;
+    border-bottom: 2px solid #680718b2;
 }
 
 .sobre_nos-div-conteudo{
