--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 }
 /* secao sobre nos*/
 .sobre_nos{
-    background-image: linear-gradient(#5f5d58,#a7471ad2);
+    background-image: linear-gradient(#85817891,#a7471ad2);
     color:#FFFFFF;
     display: flex;
     justify-content: center;
