--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Mooli';
     background-image: url("360_F_550557805_B87SNs3Eo2LGsQV61VwnhDF9fSKCmpzU.jpg");
     background-repeat:no-repeat;
-    background-position:center;
+    background-position-x:right;
 }
 
 /* secao cabecalho*/
