--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     background-image: url("360_F_550557805_B87SNs3Eo2LGsQV61VwnhDF9fSKCmpzU.jpg");
     background-repeat:no-repeat;
     background-position: center;
+    background:80px; 
 }
 
 /* secao cabecalho*/
